[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/Characters/character_shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/audios/shoot.MP3" type="AudioStream" id=3]
[ext_resource path="res://assets/images/Fase_2/backgorund_2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Fase_2/bullet_train_tail.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Fase_2/bullet_train_center.png" type="Texture" id=7]
[ext_resource path="res://assets/images/Fase_2/bullet_train_head.png" type="Texture" id=8]
[ext_resource path="res://assets/scripts/Fase_2.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6236, 10 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6236, 6 )

[node name="Fase_2" type="Node2D"]
script = ExtResource( 9 )

[node name="background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="background"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Bullet_Train" type="Node2D" parent="."]
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="tail" type="Sprite" parent="Bullet_Train"]
position = Vector2( 0, 172.5 )
texture = ExtResource( 6 )
centered = false

[node name="center1" type="Sprite" parent="Bullet_Train"]
position = Vector2( 640, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center2" type="Sprite" parent="Bullet_Train"]
position = Vector2( 1280, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center3" type="Sprite" parent="Bullet_Train"]
position = Vector2( 1920, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center4" type="Sprite" parent="Bullet_Train"]
position = Vector2( 2560, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center5" type="Sprite" parent="Bullet_Train"]
position = Vector2( 3200, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center6" type="Sprite" parent="Bullet_Train"]
position = Vector2( 3840, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center7" type="Sprite" parent="Bullet_Train"]
position = Vector2( 4480, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="center8" type="Sprite" parent="Bullet_Train"]
position = Vector2( 5120, 172.5 )
texture = ExtResource( 7 )
centered = false

[node name="head" type="Sprite" parent="Bullet_Train"]
position = Vector2( 5760, 172.5 )
texture = ExtResource( 8 )
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -6, 6 )
collision_mask = 7
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 6286, 375 )
shape = SubResource( 18 )

[node name="Area2D_Ground" type="Area2D" parent="."]
visible = false
position = Vector2( -6, 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Ground"]
position = Vector2( 6286, 359 )
shape = SubResource( 17 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 170, 289 )
z_index = 1

[node name="Position2D_bullet" type="Position2D" parent="."]
position = Vector2( 290, 371 )
__meta__ = {
"_edit_group_": true
}

[node name="warning" type="Sprite" parent="Position2D_bullet"]
modulate = Color( 1, 0, 0, 0.203922 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="position_bullet_1" type="Position2D" parent="Position2D_bullet"]

[node name="position_bullet_2" type="Position2D" parent="Position2D_bullet"]
position = Vector2( -13, -8 )

[node name="position_bullet_3" type="Position2D" parent="Position2D_bullet"]
position = Vector2( 13, 3 )

[node name="position_bullet_4" type="Position2D" parent="Position2D_bullet"]
position = Vector2( -9, 9 )

[node name="position_bullet_5" type="Position2D" parent="Position2D_bullet"]
position = Vector2( 10, -11 )

[node name="audio_shoot" type="AudioStreamPlayer2D" parent="Position2D_bullet"]
position = Vector2( -290, -371 )
stream = ExtResource( 3 )

[node name="Timer_bullet_warning" type="Timer" parent="."]
one_shot = true

[node name="Timer_bullet" type="Timer" parent="."]

[node name="Timer_shoot" type="Timer" parent="."]
wait_time = 0.15

[node name="Position2D_obstacle" type="Position2D" parent="."]
position = Vector2( 2000, 425 )

[node name="Timer_Obstacle" type="Timer" parent="."]

[node name="Camera_Fase2" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
limit_left = -125
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_top = 1.0
drag_margin_right = 0.84
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="timeout" from="Timer_bullet_warning" to="." method="_on_Timer_bullet_warning_timeout"]
[connection signal="timeout" from="Timer_bullet" to="." method="_on_Timer_bullet_timeout"]
[connection signal="timeout" from="Timer_shoot" to="." method="_on_Timer_shoot_timeout"]
[connection signal="timeout" from="Timer_Obstacle" to="." method="_on_Timer_Obstacle_timeout"]
